# libevaluate

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
cmake/: clang-tidy.cmake
libevaluate/: CMakeLists.txt  Evaluator.cpp  Evaluator.hpp  Functions.hpp
libevaluate/analyze/: AST.cpp  AST.hpp  ASTPrinter.cpp  ASTPrinter.hpp  ASTVisitor.hpp  Analyzer.cpp  Analyzer.hpp
libevaluate/lex/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
libevaluate/parse/: Node.cpp  Node.hpp  NodePrinter.cpp  NodePrinter.hpp  NodeVisitor.hpp  Parser.cpp  Parser.hpp
libevaluate/util/: Code.cpp  Code.hpp  Error.cpp  Error.hpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
